﻿1.0.42
+ Added hiddeen parameter to skip generation of "About" page
+ Character '«' now also treated as dash, so it wil not be alone in case of dropped capital
+ Epigraph author is now always printed in bold in default style
* Fixed bug when font without style attribute and font with "normal" attribute were considered different , this caused sometimes for italic styles to be overwriten
* Fixed crash in case defective PNG file was in original .FB2
* Fixed a bug when CSS stylesheet for one element contained more than one occurance of same parameter (in this case previously entire element was ignored)
* Some small changes to the look of the epigraph in default style


1.0.41
+ Added CSS style for "normal_image"
+ Switched to version 1.0.14 of FB2librarynet library that fixes several bug (detailed here)
+ Changed code to support more than one section image (as according to schema)
* Fixed the bug where images after section image were replacing section image
* Changed the non-section and non-inline images class to "normal_image" to be able to style them separately
* Changed command propmpt execution file to contain title and open one window right away

1.0.40
* Changed the way dropped capitals are calculated - now if section starts from any type of dash/hyphen looking character
  we add the character that follows it to the drop, this way it looks better
* Removed 2 character minimum limitation on dropped capitals

1.0.39
+ Added ability to draw "Capitalized" character (Huge "floating" character to start section that takes several lines)
+ Added new parameter -cap:[0/1] (default 1 -enabled) and .config setting "Capitalize" to control first character capitalization
* Changed the default CSS style to support first character capitalization
* Fixed old bug that prevented creation of multilevel headers <h1>,<h2>,<h3>,... based on depth(all <h2> were always created)
* Switched to newer version of UnRar library (Chikalite 9.1.2.0) 