@@ -2,6 +2,7 @@
 + Added hiddeen parameter to skip generation of "About" page
 + Character '«' now also treated as dash, so it wil not be alone in case of dropped capital
 + Epigraph author is now always printed in bold in default style
++ Added different class "epigraph_main" for a book's main epigraphs (not inside sections)
 * Fixed bug when font without style attribute and font with "normal" attribute were considered different , this caused sometimes for italic styles to be overwriten
 * Fixed crash in case defective PNG file was in original .FB2
 * Fixed a bug when CSS stylesheet for one element contained more than one occurance of same parameter (in this case previously entire element was ignored)
